--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -16,6 +16,19 @@
 	box-sizing: border-box;
 }
 
+.Canvas {
+	position: relative;
+	background-color: #FFF3E0;
+	border: 2px solid #FFB74D;
+	overflow: auto;
+	box-sizing: content-box;
+	padding: .25rem;
+
+	> * {
+		position: absolute;
+	}
+}
+
 input[type=checkbox] {
 	@size: 3rem;
 	-moz-appearance: none;
@@ -53,4 +66,8 @@ input[type=checkbox] {
 	&:checked:after {
 		top: -@size;
 	}
+}
+
+.Connector {
+	background: @inactiveColor;
 }
