--- a/styles/logic.css
+++ b/styles/logic.css
@@ -4,23 +4,14 @@
 * {
   box-sizing: border-box;
 }
-.Canvas {
-  position: relative;
-  background-color: #FFF3E0;
-  border: 2px solid #FFB74D;
-  overflow: auto;
-  box-sizing: content-box;
-  padding: .25rem;
-}
-.Canvas > * {
-  position: absolute;
-}
 input[type=checkbox] {
   -moz-appearance: none;
   position: relative;
   width: 3rem;
   height: 3rem;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 input[type=checkbox]:before {
   content: '';
@@ -53,32 +44,199 @@ input[type=checkbox]:after {
 input[type=checkbox]:checked:after {
   top: -3rem;
 }
+input[type=checkbox]:checked + .Connector,
+input[type=checkbox]:checked + .Connector + .Connector,
+input[type=checkbox]:checked + .Connector + .Connector + .Connector,
+input[type=checkbox]:checked + .Connector:before,
+input[type=checkbox]:checked + .Connector + .Connector:before,
+input[type=checkbox]:checked + .Connector + .Connector + .Connector:before {
+  background-color: #ffc107;
+}
+.Canvas {
+  position: relative;
+  overflow: visible;
+  box-sizing: content-box;
+  margin: 0.5rem;
+}
+.Canvas:before {
+  content: '';
+  display: block;
+  background-color: #FFF3E0;
+  border: 2px solid #FFB74D;
+  position: absolute;
+  top: -0.5rem;
+  left: -0.5rem;
+  right: -0.5rem;
+  bottom: -0.5rem;
+}
+.Canvas > * {
+  position: absolute !important;
+}
 .Connector {
+  z-index: 1;
   background: #e0e0e0;
+  -webkit-transition: background cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
+          transition: background cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
+  box-sizing: content-box;
 }
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result:before {
-  content: '1';
-  font-weight: bold;
+.Connector.Vertical {
+  width: 0.5rem;
+  margin-left: calc(-0.25rem  -  2px);
+  margin-top: -2px;
+  padding: 2px 0;
+  border-left: 2px solid #ffb300;
+  border-right: 2px solid #ffb300;
 }
- #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result:before {
-  content: '1';
-  font-weight: bold;
+.Connector.Horizontal {
+  height: 0.5rem;
+  margin-top: calc(-0.25rem  -  2px);
+  margin-left: -2px;
+  padding: 0 2px;
+  border-top: 2px solid #ffb300;
+  border-bottom: 2px solid #ffb300;
 }
- #simple-or-a:checked ~ #simple-or-result:before {
-  content: '1';
-  font-weight: bold;
+.Connector.Horizontal.Corner.Left:before {
+  border-left: 2px solid #ffb300;
+  padding-right: 2px;
+  left: -0.25rem;
+  top: -2px;
 }
- #simple-or-b:checked ~ #simple-or-result:before {
-  content: '1';
-  font-weight: bold;
+.Connector.Horizontal.Corner.Right:before {
+  border-right: 2px solid #ffb300;
+  padding-left: 2px;
+  right: -0.25rem;
+  top: -2px;
 }
- #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:before,
- #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:before {
-  content: '1';
-  font-weight: bold;
+.Connector.Horizontal.Corner.Up:before {
+  border-bottom: 2px solid #ffb300;
+  padding-top: 2px;
 }
-.Result:before {
-  content: '0';
+.Connector.Horizontal.Corner.Down:before {
+  border-top: 2px solid #ffb300;
+  padding-bottom: 2px;
+}
+.Connector.Corner:before {
+  content: '';
+  display: block;
+  position: absolute;
+  box-sizing: inherit;
+  -webkit-transition: inherit;
+          transition: inherit;
+  background-color: #e0e0e0;
+  width: 0.5rem;
+  height: 0.5rem;
+}
+.Result {
+  overflow: hidden;
+  position: relative;
+  border-radius: 1.5rem;
+  display: block;
+  width: 3rem;
+  height: 3rem;
+  box-sizing: border-box;
+  background-color: #e0e0e0;
+  border: 2px solid #ffb300;
+  -webkit-transition: background cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
+          transition: background cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
+}
+.Result:after {
+  white-space: pre;
+  content: '0\00000a1';
+  font-size: 2rem;
+  display: block;
+  width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  -webkit-transition: top cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
+          transition: top cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result {
+  background-color: #ffc107;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result:after,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result:after {
+  top: -3rem;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector,
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector,
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector + .Connector,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector + .Connector,
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector:before,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector:before,
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector:before,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector:before,
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector + .Connector:before,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector + .Connector:before {
+  background-color: #ffc107;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result {
+  background-color: #ffc107;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result:after {
+  top: -3rem;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector,
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector,
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Connector,
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector:before,
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector:before,
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Connector:before {
+  background-color: #ffc107;
+}
+ #simple-or-a:checked ~ #simple-or-result {
+  background-color: #ffc107;
+}
+ #simple-or-a:checked ~ #simple-or-result:after {
+  top: -3rem;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector,
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector,
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Connector,
+ #simple-or-a:checked ~ #simple-or-result + .Connector:before,
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector:before,
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Connector:before {
+  background-color: #ffc107;
+}
+ #simple-or-b:checked ~ #simple-or-result {
+  background-color: #ffc107;
+}
+ #simple-or-b:checked ~ #simple-or-result:after {
+  top: -3rem;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector,
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector,
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Connector,
+ #simple-or-b:checked ~ #simple-or-result + .Connector:before,
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector:before,
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Connector:before {
+  background-color: #ffc107;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result {
+  background-color: #ffc107;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:after,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:after {
+  top: -3rem;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector,
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector,
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector,
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector:before,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector:before,
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector:before,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector:before,
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector:before,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector:before {
+  background-color: #ffc107;
 }
 /*# sourceMappingURL=logic.css.map */
